--- a/public/index.html
+++ b/public/index.html
@@ -2,40 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#000000" />
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <link rel="shortcut icon" href="%PUBLIC_URL%/cat.ico" />
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" id="vp">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>中大门</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <script type="text/javascript">
+      // // 把尺寸放大N倍（N是window.devicePixelRatio）
+      // var wd = document.documentElement.clientWidth*window.devicePixelRatio/10;
+      // //物理像素*设备像素比=真实像素
+      // document.getElementsByTagName("html")[0].style.fontSize = wd + "px";
+      // // 把屏幕的倍率缩小到N分之一（N是window.devicePixelRatio）
+      // var scale = 1/window.devicePixelRatio;
+      // var mstr = 'initial-scale='+ scale +', maximum-scale='+ scale +', minimum-scale='+ scale +', user-scalable=no';
+      // document.getElementById("vp").content = mstr;
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    //   (function (doc, win) {
+    //     var docEl = doc.documentElement,
+    //         resizeEvt = 'onorientationchange' in window ? 'onorientationchange' : 'resize',
+    //         recalc = function () {
+    //             var clientWidth = docEl.clientWidth;
+    //             if (!clientWidth) return;
+    //             if(clientWidth>=750){
+    //                 docEl.style.fontSize = '100px';
+    //             }else{
+    //                 docEl.style.fontSize = 100 * (clientWidth / 750) + 'px';
+    //             }
+    //         };
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    //     if (!doc.addEventListener) return;
+    //     win.addEventListener(resizeEvt, recalc, false);
+    //     doc.addEventListener('DOMContentLoaded', recalc, false);
+    // })(document, window);
+    </script>
   </body>
 </html>
